# hevcParser

./: CMakeLists.txt  README.md
src/: H264Parser.cpp  H264Parser.h  HEVCParser.h  h2645_paramter.h  h265Parser.cpp  h265Parser.h  main.cpp  parser_util.h
